syntax = "proto3";

package warehouse_v1;

option go_package = "github.com/sarastee/LamodaTest/pkg/warehouse_v1;warehouse_v1";

service WarehouseV1 {
  rpc Reserve(ReserveRequest) returns (ReserveResponse);
  rpc UndoReserve(UndoReserveRequest) returns (UndoReserveResponse);
  rpc Release(ReleaseRequest) returns (ReleaseResponse);
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
}

message ReserveRequest {
  repeated int32 codes = 1;
}

message ReserveResponse {
  string message = 1;
}

message UndoReserveRequest {
  repeated int32 codes = 1;
}

message UndoReserveResponse {
  string message = 1;
}

message ReleaseRequest {
  repeated int32 codes = 1;
}

message ReleaseResponse {
  string message = 1;
}

message GetAllRequest {
  int32 warehouse_id =1;
}

message GetAllResponse {
  int64 amount = 1;
}